# nubank_django

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: build.yml
nubank_django/: admin.py  apps.py  domain.py  models.py  nu.py  utils.py
nubank_django/migrations/: 0001_initial.py  0002_alter_accountstatement_gql_typename.py
tests/: conftest.py  settings.py  test_admin.py  test_nu.py  test_nu_credit_card.py  test_nuconta.py
