[metadata]
name = nubank-django
version = 0.0.1
description = Django app for pulling Nubank information into models and other misc. helpers.
long_description = file: README.md
long_description_content_type = text/markdown
author = João Paulo Bernhardt
author_email = joao@joao-paulo.com
url = TODO
download_url = TODO
license = TO DO
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.8
install_requires =
    Django >= 3.2
    pynubank == 2.17.0
    django-object-actions == 4.0.0
    django-admin-rangefilter == 0.8.3
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    tests
    tests.*

[coverage.html]
skip_covered = True
skip_empty = True

[coverage:run]
branch = True
parallel = True
source = nubank_django
omit = setup.py
    tests\*

[coverage:paths]
source =
   nubank_django

[coverage:report]
fail_under = 89
show_missing = True

[flake8]
max-line-length = 120
exclude = migrations

[isort]
combine_as_imports = true
profile = black
